Cambios para legibilidad en movil

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </button>
             </div>
         </nav>
-        <div id="mobile-menu" class="md:hidden bg-white border-t border-gray-200 transition-all duration-300 ease-in-out overflow-hidden max-h-0">
+        <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
             <a href="#propuesta" class="block py-3 px-4 text-sm hover:bg-gray-100">Visión</a>
             <a href="#diferencia" class="block py-3 px-4 text-sm hover:bg-gray-100">El Valor Real</a>
             <a href="#hoja-de-ruta" class="block py-3 px-4 text-sm hover:bg-gray-100">Hoja de Ruta</a>
@@ -66,9 +66,8 @@
                     Georiego.
                 </p>
                 <a href="#diferencia"
-                    class="bg-blue-600 text-white font-bold py-4 px-10 rounded-lg hover:bg-blue-700 transition-transform transform hover:scale-105 duration-300 text-lg shadow-lg">
-                    Descubra el Verdadero Valor
-                </a>
+                    class="bg-blue-600 text-white font-bold py-4 px-6 rounded-lg hover:bg-blue-700 transition-transform transform hover:scale-105 duration-300 text-lg shadow-lg">Descubrir
+                    Valor</a>
             </div>
         </section>
 
