Arreglo de carrusel tecnologia

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     Georiego.
                 </p>
                 <a href="#diferencia"
-                    class="bg-blue-600 text-white font-bold py-4 px-6 rounded-lg hover:bg-blue-700 transition-transform transform hover:scale-105 duration-300 text-lg shadow-lg">Descubrir
-                    Valor</a>
+                    class="bg-blue-600 text-white font-bold py-4 px-6 rounded-lg hover:bg-blue-700 transition-transform transform hover:scale-105 duration-300 text-lg shadow-lg">
+                    Descubrir Valor</a>
             </div>
         </section>
 
@@ -749,7 +749,7 @@
                         seguro, rápido y escalable.</p>
                 </div>
 
-                <div class="swiper-container relative max-w-6xl mx-auto">
+                <div class="swiper-container overflow-hidden relative max-w-6xl mx-auto">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide p-4">
                             <div
