--- a/index.html
+++ b/index.html
@@ -442,8 +442,7 @@
                                     <h4 class="font-bold text-lg">Fase 0: Consultoría y Diseño</h4>
                                 </div>
                                 <div class="text-left sm:text-right flex-shrink-0">
-                                    <p class="text-xl font-bold text-blue-600">S/ 1,400 <span
-                                            class="text-sm font-normal text-gray-500">(IGV Incluido)</span></p>
+                                    <p class="text-xl font-bold text-blue-600">S/ 1,400</p>
                                 </div>
                             </div>
                             <div
@@ -452,8 +451,7 @@
                                     <h4 class="font-bold text-lg">Fase I: Construcción del Núcleo</h4>
                                 </div>
                                 <div class="text-left sm:text-right flex-shrink-0">
-                                    <p class="text-xl font-bold text-blue-600">S/ 9,000 <span
-                                            class="text-sm font-normal text-gray-500">(IGV Incluido)</span></p>
+                                    <p class="text-xl font-bold text-blue-600">S/ 9,000</p>
                                     <p class="text-xs text-gray-400">50% adelanto, 50% contra entrega.</p>
                                 </div>
                             </div>
@@ -472,8 +470,7 @@
                                 </p>
                                 <div class="mt-auto pt-4 border-t border-gray-200">
                                     <p class="text-sm text-gray-500">Tiempo: <strong>3-4 Semanas</strong></p>
-                                    <p class="text-xl font-bold text-blue-600">S/ 3,500 <span
-                                            class="text-sm font-normal text-gray-500">(IGV Incluido)</span></p>
+                                    <p class="text-xl font-bold text-blue-600">S/ 3,500</p>
                                 </div>
                             </div>
                             <div class="p-6 bg-white rounded-lg shadow-sm border border-gray-200 flex flex-col">
@@ -482,8 +479,7 @@
                                     logística usando códigos de barras para una gestión de inventario sin errores.</p>
                                 <div class="mt-auto pt-4 border-t border-gray-200">
                                     <p class="text-sm text-gray-500">Tiempo: <strong>2-3 Semanas</strong></p>
-                                    <p class="text-xl font-bold text-blue-600">S/ 3,000 <span
-                                            class="text-sm font-normal text-gray-500">(IGV Incluido)</span></p>
+                                    <p class="text-xl font-bold text-blue-600">S/ 3,000</p>
                                 </div>
                             </div>
                             <div class="p-6 bg-white rounded-lg shadow-sm border border-gray-200 flex flex-col">
@@ -492,8 +488,7 @@
                                     consultas de clientes mostrando su stock en tiempo real en su página web.</p>
                                 <div class="mt-auto pt-4 border-t border-gray-200">
                                     <p class="text-sm text-gray-500">Tiempo: <strong>2 Semanas</strong></p>
-                                    <p class="text-xl font-bold text-blue-600">S/ 2,800 <span
-                                            class="text-sm font-normal text-gray-500">(IGV Incluido)</span></p>
+                                    <p class="text-xl font-bold text-blue-600">S/ 2,800</p>
                                 </div>
                             </div>
                             <div class="p-6 bg-white rounded-lg shadow-sm border border-gray-200 flex flex-col">
@@ -503,8 +498,7 @@
                                 </p>
                                 <div class="mt-auto pt-4 border-t border-gray-200">
                                     <p class="text-sm text-gray-500">Tiempo: <strong>2-3 Semanas</strong></p>
-                                    <p class="text-xl font-bold text-blue-600">S/ 2,200 <span
-                                            class="text-sm font-normal text-gray-500">(IGV Incluido)</span></p>
+                                    <p class="text-xl font-bold text-blue-600">S/ 2,200</p>
                                 </div>
                             </div>
                         </div>
@@ -535,8 +529,8 @@
                                 <h4 class="font-semibold text-lg mt-4">3. Plan de Soporte y Mantenimiento</h4>
                                 <p class="text-2xl font-bold my-2">S/ 200 <span class="text-base font-normal">/
                                         mes</span></p>
-                                <p class="text-sm text-gray-500">Nuestro servicio (IGV Incluido) para mantener su
-                                    sistema seguro, actualizado y con soporte.</p>
+                                <p class="text-sm text-gray-500">Nuestro servicio para mantener su sistema seguro,
+                                    actualizado y con soporte.</p>
                             </div>
                         </div>
                     </div>
@@ -560,8 +554,7 @@
                                 class="flex flex-col md:flex-row justify-between items-center text-center md:text-left">
                                 <div>
                                     <p class="text-gray-500 line-through">Valor Total: S/ 21,900</p>
-                                    <p class="text-4xl font-extrabold text-blue-600">S/ 19,700 <span
-                                            class="text-lg font-normal text-gray-500">(IGV Incluido)</span></p>
+                                    <p class="text-4xl font-extrabold text-blue-600">S/ 19,700</p>
                                 </div>
                                 <div
                                     class="border-t md:border-t-0 md:border-l border-gray-300 mt-4 md:mt-0 pt-4 md:pt-0 md:pl-6 ml-0 md:ml-6">
