--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Propuesta estratégica de Alfactor para Georiego: un sistema ERP unificado con Bsale y un catálogo web a medida para optimizar operaciones y potenciar el crecimiento.">
     <title>Propuesta Estratégica para Georiego | Alfactor</title>
+    <meta name="author" content="Alfactor Consultores | Diego Abad">
     <link rel="icon" href="https://via.placeholder.com/32x32/16a34a/ffffff?text=G" type="image/x-icon">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -30,8 +30,9 @@
                 <a href="#inversion" class="nav-link text-gray-600 hover:text-blue-600">Inversión</a>
             </div>
             <div class="md:hidden">
-                <button id="menu-btn" class="text-gray-600 focus:outline-none">
+                <button id="menu-btn" class="text-gray-600 focus:outline-none" aria-label="Abrir menú de navegación">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <title>Icono de menú</title>
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                     </svg>
                 </button>
@@ -72,7 +73,9 @@
                 <div class="grid md:grid-cols-2 gap-10 max-w-5xl mx-auto">
                     <div class="bg-gray-50 p-8 rounded-xl border border-gray-200">
                         <div class="flex items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-red-500 mr-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" /></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-red-500 mr-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <title>Icono de sistema rígido</title>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" /></svg>
                             <h3 class="text-2xl font-bold text-gray-800">1. Internamente: Un Sistema Rígido</h3>
                         </div>
                         <p class="mt-4 text-gray-600">Su sistema de ventas actual es genérico y poco flexible. Esto le obliga a supervisar todo personalmente, le dificulta delegar con confianza y le entrega reportes que le hacen reaccionar tarde, en lugar de actuar proactivamente.</p>
@@ -151,16 +154,53 @@
                         <div class="flex-shrink-0 bg-blue-100 text-blue-600 rounded-full h-12 w-12 flex items-center justify-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
                         </div>
-                        <h3 class="text-xl font-bold text-gray-800 mt-6">Inteligencia de Negocio al Instante</h3>
-                        <p class="mt-2 text-gray-600">Acceda a dashboards y reportes en tiempo real sobre sus productos más vendidos, mejores clientes y rendimiento por sucursal. Tome decisiones basadas en datos, no en intuición.</p>
+                        <h3 class="text-xl font-bold text-gray-800 mt-6">Inteligencia de Negocio en Tiempo Real</h3>
+                        <p class="mt-2 text-gray-600">Acceda a dashboards y reportes en tiempo real sobre sus productos más vendidos, mejores clientes y rendimiento por sucursal, <strong>mejorando la toma de decisiones en un 30%</strong>. Tome decisiones basadas en datos, no en intuición.</p>
                     </div>
                      <div class="bg-gray-50 p-8 rounded-xl shadow-md">
                         <div class="flex-shrink-0 bg-blue-100 text-blue-600 rounded-full h-12 w-12 flex items-center justify-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                         </div>
                         <h3 class="text-xl font-bold text-gray-800 mt-6">Operación Eficiente y sin Errores</h3>
-                        <p class="mt-2 text-gray-600">La facturación electrónica SUNAT está integrada, ahorrando horas de trabajo administrativo. El control de inventario preciso reduce pérdidas y optimiza las compras.</p>
+                        <p class="mt-2 text-gray-600">La facturación electrónica SUNAT está integrada, <strong>ahorrando hasta un 40% de horas de trabajo administrativo</strong>. El control de inventario preciso <strong>minimiza pérdidas por quiebres de stock y optimiza el ciclo de compra</strong>.</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="consideracion-atencion" class="py-20 bg-gray-100">
+            <div class="container mx-auto px-4 sm:px-6">
+                <div class="text-center mb-16">
+                    <h2 class="section-title text-gray-900">Consideración Estratégica: Canales de Atención</h2>
+                    <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Un punto clave es cómo gestionará la comunicación con sus clientes. Aquí comparamos el enfoque de cada plataforma.</p>
+                </div>
+                <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
+                    <div class="bg-white p-8 rounded-xl border border-gray-200">
+                        <div class="flex items-center mb-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-600 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" /></svg>
+                            <h3 class="text-2xl font-bold text-gray-800">Bsale: Enfoque en Integración</h3>
+                        </div>
+                        <ul class="list-disc list-inside space-y-2 text-gray-600">
+                            <li><strong class="text-gray-800">No tiene un chat nativo.</strong> Su fortaleza es ser el mejor en la operación de ventas e inventario.</li>
+                            <li>Está diseñado para integrarse con herramientas expertas en comunicación, como <strong class="text-green-600">WhatsApp</strong>.</li>
+                            <li>Nuestra estrategia aprovecha esta fortaleza para crear un canal de venta consultiva directo y eficaz.</li>
+                        </ul>
+                    </div>
+                    <div class="bg-white p-8 rounded-xl border border-gray-200">
+                        <div class="flex items-center mb-4">
+                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-purple-500 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" /></svg>
+                            <h3 class="text-2xl font-bold text-gray-800">Odoo: Ecosistema Nativo</h3>
+                        </div>
+                         <ul class="list-disc list-inside space-y-2 text-gray-600">
+                            <li><strong class="text-gray-800">Sí tiene un módulo "Live Chat".</strong> Permite instalar un widget en su web para atender desde Odoo.</li>
+                            <li>Se integra de forma nativa con su propio CRM y módulos de venta internos.</li>
+                            <li><strong class="text-purple-500">Ventaja:</strong> Canal de atención sin costos de API de WhatsApp.</li>
+                        </ul>
+                    </div>
+                </div>
+                 <div class="max-w-4xl mx-auto bg-green-50 border-l-4 border-green-600 p-6 rounded-r-lg mt-10">
+                    <h4 class="font-bold text-green-900 text-xl">Conclusión Estratégica</h4>
+                    <p class="text-green-800 mt-2">Aunque el chat nativo de Odoo es potente, viene acompañado de la alta inversión y complejidad que ya descartamos. Para la etapa actual de Georiego, la <strong class="text-green-700">flexibilidad y el bajo costo de iniciar con WhatsApp es la ruta más ágil y rentable.</strong> Esto establece el canal de comunicación preferido por los clientes y prepara el camino para automatizarlo con IA en el futuro, sin la carga de un sistema sobredimensionado.</p>
                 </div>
             </div>
         </section>
@@ -171,8 +211,8 @@
                     <h2 class="section-title text-gray-900">El Plan de Construcción</h2>
                     <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Construiremos su ecosistema digital por fases, entregando valor de forma rápida y sentando bases sólidas para el futuro.</p>
                 </div>
-                <div class="relative max-w-3xl mx-auto">
-                    <div class="relative pl-12 pt-2 pb-16 timeline-item">
+                <ol class="relative max-w-3xl mx-auto timeline-list">
+                    <li class="relative pl-12 pt-2 pb-16 timeline-item">
                         <div class="timeline-dot active"></div>
                         <span class="absolute left-12 top-0 text-sm font-semibold text-blue-600">FASE 0: ESTRATEGIA Y Cimientos</span>
                         <h3 class="text-2xl font-bold text-gray-800 mt-4 mb-2">Consultoría y Diseño a Medida</h3>
@@ -180,8 +220,8 @@
                         <div class="bg-white p-4 rounded-lg border border-gray-200">
                             <p><strong>&#9200; Tiempo Estimado:</strong> 1 Semana</p>
                         </div>
-                    </div>
-                    <div class="relative pl-12 pt-2 pb-16 timeline-item">
+                    </li>
+                    <li class="relative pl-12 pt-2 pb-16 timeline-item">
                         <div class="timeline-dot active"></div>
                         <span class="absolute left-12 top-0 text-sm font-semibold text-blue-600">FASE I: EL Núcleo Operativo</span>
                         <h3 class="text-2xl font-bold text-gray-800 mt-4 mb-2">Implementación y Capacitación de Bsale</h3>
@@ -189,8 +229,8 @@
                         <div class="bg-white p-4 rounded-lg border border-gray-200">
                             <p><strong>&#9200; Tiempo Estimado:</strong> 2 - 3 Semanas</p>
                         </div>
-                    </div>
-                    <div class="relative pl-12 pt-2 pb-16 timeline-item">
+                    </li>
+                    <li class="relative pl-12 pt-2 pb-16 timeline-item">
                         <div class="timeline-dot active"></div>
                         <span class="absolute left-12 top-0 text-sm font-semibold text-blue-600">FASE II: SU ACTIVO DIGITAL</span>
                         <h3 class="text-2xl font-bold text-gray-800 mt-4 mb-2">Desarrollo del Catálogo Web e Integración</h3>
@@ -198,7 +238,7 @@
                          <div class="bg-white p-4 rounded-lg border border-gray-200">
                             <p><strong>&#9200; Tiempo Estimado:</strong> 6 - 8 Semanas</p>
                         </div>
-                    </div>
+                    </li>
                 </div>
             </div>
         </section>
@@ -334,11 +374,11 @@
         </div>
     </footer>
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 
-    <button id="back-to-top" class="fixed bottom-5 right-5 bg-blue-600 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 transition-opacity duration-300 opacity-0 z-50">
+    <button id="back-to-top" class="fixed bottom-5 right-5 bg-blue-600 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 transition-opacity duration-300 opacity-0 z-50" aria-label="Volver al inicio">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>Flecha hacia arriba</title>
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"></path>
         </svg>
     </button>
